# moss-in-reachy-mini

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  README.md  agent.py  main.py  moss_in_reachy_mini.py  music_and_dance.md  pyproject.toml  state.py
.requirements/: dynamic_face_recognition.md
.workspace/configs/reachy_mini_instructions/: persona.md
audio/: player.py
channels/: antennas.py  body.py  head.py
dependencies/: ghoshell_moss-0.1.0a0-py3-none-any.whl
examples/: keyboard_listener_test.py
listener/: __init__.py  callbacks.py  configs.py  lisenter_impl.py  mini_input_impl.py  providers.py  pyaudio_input_impl.py  volcengine_bm.py
listener/chat/: console_ptt.py
listener/concepts/: trace.py
listener/states/: __init__.py  _asleep.py  _deaf.py  _listening.py  _pdt_listening.py  _pdt_waiting.py
moves/: head_move.py
src/framework/: __init__.py  main.py
src/framework/abcd/: agent.py  agent_event.py  agent_hook.py  agent_hub.py  memory.py  session.py
src/framework/agent/: agent_fastapi.py  agent_hook.py  agent_hub.py  broadcaster.py  cognition_agent.py  decision_agent.py  eventbus.py  main_agent.py  response.py  storage_memory.py  utils.py
src/framework/apps/: agent_task.py  news.py  todolist.py  utils.py  volc_websearch.py  zmq_test.py
src/framework/channels/: news_channel.py  todolist_channel.py  utils.py
src/framework/listener/: __init__.py  async_concepts.py  async_listener_service.py  async_states.py  async_volcengine_bm.py  callbacks.py  configs.py  lisenter_impl.py  pyaudio_input_impl.py  volcengine_bm.py
src/framework/live/: douyin_live.py  douyin_live_channel.py
src/framework/memory/: storage_memory.py  storage_memory_server.py  storage_memory_streamlit.py
src/framework/moss_contrib/: ctml_repo.py
src/framework/rgb/: serial.py  ws2812.py
src/framework/speech/: example_speech.py
src/moss_in_reachy_mini/: README.md  agent.py  desktop_main.py  logger.py  main.py  memory_ui.py  moss.py  start_memory_ui.sh  state.py  utils.py
src/moss_in_reachy_mini/audio/: file_player.py  mic_hub.py  mixer.py  pcm_utils.py  player.py
src/moss_in_reachy_mini/camera/: camera_worker.py  drawer.py  face_recognizer.py  frame_hub.py  magic.py  model.py
src/moss_in_reachy_mini/channels/: antennas.py  body.py  head.py  vision.py
src/moss_in_reachy_mini/components/: antennas.py  body.py  head.py  head_tracker.py  music.py  sound.py  vision.py
src/moss_in_reachy_mini/listener/: __init__.py  callbacks.py  configs.py  lisenter_impl.py  mini_input_impl.py  pyaudio_input_impl.py  volcengine_bm.py
src/moss_in_reachy_mini/moves/: head_move.py
src/moss_in_reachy_mini/scripts/: assess_live_users.py  ctml_sound_player_demo.py  ctml_video_recorder_demo.py  extract_choreography.py  memory_ui.py  ouput_audio_info.py  (+3 more)
vision/: camera_worker.py  head_tracker.py
vision/yolo/: drawer.py  head_detector.py
(+180 files in other folders)
