[project]
name = "moss-in-reachy-mini"
version = "0.1.0"
description = "Add your description here"
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghoshell-moss==0.1.0a0",
    "ghoshell-moss[audio,contrib,zmq]",
    "reachy-mini>=1.3.1",
    "reachy-mini[gstreamer]>=1.3.1",
    "reachy-mini[mujoco]>=1.3.1",
    "ultralytics>=8.4.14",
    "supervision>=0.27.0.post1",
]


[tool.uv]
resolution = "lowest-direct"