[project]
name = "moss-in-reachy-mini"
version = "0.1.0"
description = "Add your description here"
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghoshell-moss==0.1.0a0",
    "ghoshell-moss[audio,contrib,zmq]",
    "reachy-mini>=1.3.1",
    "reachy-mini[gstreamer]>=1.3.1",
    "reachy-mini[mujoco]>=1.3.1",
    "ultralytics>=8.4.14",
    "supervision>=0.27.0.post1",
    "reachy-mini-dances-library==0.2.1",
    "streamlit>=1.54.0",
]

[tool.setuptools]
packages = ["src"]

[tool.uv]
resolution = "lowest-direct"

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
    "anyio>=4.10.0",
]
