[project]
name = "moss-in-reachy-mini"
version = "0.1.0"
description = "Add your description here"
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reachy-mini==1.3.1",
    "reachy-mini-dances-library==0.2.1",
    "streamlit>=1.54.0",
    "insightface==0.7.3",
    "onnxruntime==1.24.4",
    "newsapi-python==0.2.7",
    "cchardet==2.2.0a2",
    "trafilatura==2.0.0",
    "ghoshell-moss",
    "ghoshell-moss[audio,contrib,zmq]",
    "pydantic-settings>=2.0.0",
    "python-proxy>=0.0.1",
    "reflex==0.8.27",
    "claude-agent-sdk==0.1.49",
    "pysocks==1.7.1",
    "av>=14.0.0",
    "pydantic-deep==0.2.2",
    "pydantic-ai-backend==0.1.14",
    "pydantic-ai==1.70.0",
    "librosa>=0.10.2",
    "pynput==1.8.1",
]

[project.optional-dependencies]
douyin_live = [
    "requests==2.32.2",
    "betterproto==2.0.0b6",
    "websocket-client==1.7.0",
    "PyExecJS==1.5.1",
    "mini_racer==0.12.4",
]

rgb = [
    "pyserial-asyncio==0.6"
]

[tool.uv.sources]
ghoshell-moss = { path = "./dependencies/ghoshell_moss-0.1.0a0-py3-none-any.whl" }

[tool.setuptools]
packages = ["src"]

[tool.uv]
resolution = "lowest-direct"
override-dependencies = [ "huggingface-hub==1.3.4" ]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
]
